--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
 
     <!-- Navbar -->
     <header class="header">
@@ -25,6 +25,7 @@
                     <a href="#home" class="nav-link active">Home</a>
                     <a href="#about" class="nav-link">About</a>
                     <a href="#skills" class="nav-link">Skills</a>
+                    <a href="#certifications" class="nav-link">Certifications</a>
                     <a href="#projects" class="nav-link">Projects</a>
                     <a href="#blogs" class="nav-link">Blogs</a>
                     <a href="#contact" class="nav-link">Contact</a>
@@ -112,8 +113,11 @@
                     </p>
                     <p>
                         I've independently shipped multiple end-to-end projects — including an A/B Testing Platform
-                        that runs real-time statistical analysis, and a Cricket Analytics tool that builds India's best XI 
-                        using scraped performance data. I don't just code features — I build systems that work, scale, and
+                        that runs real-time statistical analysis,a Fullstack Bengaluru House Price Prediction trained
+                        using Linear Regression
+                        and a Cricket Analytics tool that builds India's best XI
+                        using scraped performance data. I don't just code features — I build systems that work, scale,
+                        and
                         deliver insights.
                     </p>
 
@@ -263,7 +267,6 @@
                     </div>
                 </div>
 
-                <!-- AWS Cloud Practitioner -->
                 <div class="cert-card">
                     <div class="cert-header">
                         <div class="cert-logo">
@@ -293,7 +296,7 @@
                     </div>
                 </div>
 
-                <!-- Machine Learning Specialization -->
+
                 <div class="cert-card">
                     <div class="cert-header">
                         <div class="cert-logo">
@@ -335,6 +338,18 @@
             </div>
             <div class="projects-grid">
                 <!-- Project 1 -->
+                <div class="project-card">
+                    <div class="project-tag">Machine Learning</div>
+                    <div class="project-image">
+                        <img src="Assets/project4.jpg" alt="Machine Learning Project">
+                    </div>
+                    <div class="project-content">
+                        <h3>Bangalore House price Prediction</h3>
+                        <p>A Fullstack application of Machine Learning</p>
+                        <button class="project-btn" data-project-id="3">View Details</button>
+                    </div>
+                </div>
+
                 <div class="project-card">
                     <div class="project-tag">Statistics</div>
                     <div class="project-image">
