--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandaru Vighneshwar Rao - Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
@@ -68,6 +69,10 @@
                             <a href="https://github.com/vighneshwarrao" target="_blank" class="social-icon">
                                 <i class="fab fa-github"></i>
                             </a>
+                            <a href="https://medium.com/@vighneshwarraobandaru" target="_blank" class="social-icon">
+                                <i class="fab fa-medium"></i>
+                            </a>
+                            
                         </div>
                     </div>
                 </div>
