Added mobile Navbar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 </head>
 
 <body>
-
-
     <!-- Navbar -->
     <header class="header">
         <div class="container">
@@ -39,6 +37,86 @@
             </nav>
         </div>
     </header>
+
+    <!-- Mobile Navigation -->
+    <div class="mobile-nav">
+        <div class="mobile-nav-overlay"></div>
+        <div class="mobile-nav-container">
+            <div class="mobile-nav-header">
+                <div class="mobile-nav-logo">BVR</div>
+                <div class="mobile-nav-close">
+                    <i class="fas fa-times"></i>
+                </div>
+            </div>
+            <div class="mobile-nav-links">
+                <a href="#home" class="mobile-nav-link active">
+                    <i class="fas fa-home"></i>
+                    <span>Home</span>
+                </a>
+                <a href="#about" class="mobile-nav-link">
+                    <i class="fas fa-user"></i>
+                    <span>About</span>
+                </a>
+                <a href="#skills" class="mobile-nav-link">
+                    <i class="fas fa-code"></i>
+                    <span>Skills</span>
+                </a>
+                <a href="#certifications" class="mobile-nav-link">
+                    <i class="fas fa-certificate"></i>
+                    <span>Certifications</span>
+                </a>
+                <a href="#projects" class="mobile-nav-link">
+                    <i class="fas fa-project-diagram"></i>
+                    <span>Projects</span>
+                </a>
+                <a href="#blogs" class="mobile-nav-link">
+                    <i class="fas fa-blog"></i>
+                    <span>Blogs</span>
+                </a>
+                <a href="#contact" class="mobile-nav-link">
+                    <i class="fas fa-envelope"></i>
+                    <span>Contact</span>
+                </a>
+            </div>
+            <div class="mobile-nav-social">
+                <a href="https://linkedin.com/in/vighneshwarrao" target="_blank" class="mobile-social-icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/vighneshwarrao" target="_blank" class="mobile-social-icon">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://medium.com/@vighneshwarraobandaru" target="_blank" class="mobile-social-icon">
+                    <i class="fab fa-medium"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Mobile Bottom Navigation -->
+    <div class="mobile-bottom-nav">
+        <a href="#home" class="mobile-bottom-nav-item active">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="#about" class="mobile-bottom-nav-item">
+            <i class="fas fa-user"></i>
+            <span>About</span>
+        </a>
+        <a href="#" class="mobile-bottom-nav-item mobile-menu-btn">
+            <div class="mobile-menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
+            <span>Menu</span>
+        </a>
+        <a href="#projects" class="mobile-bottom-nav-item">
+            <i class="fas fa-project-diagram"></i>
+            <span>Projects</span>
+        </a>
+        <a href="#contact" class="mobile-bottom-nav-item">
+            <i class="fas fa-envelope"></i>
+            <span>Contact</span>
+        </a>
+    </div>
 
     <!-- Home Section -->
     <section id="home" class="home">
