Updated mobile Navbar v2

--- a/index.html
+++ b/index.html
@@ -528,8 +528,10 @@
     <!-- Project Modal -->
     <div id="popup-container" role="dialog" aria-hidden="true">
         <div id="popup-content">
-            <span class="close-btn" role="button" aria-label="Close">&times;</span>
+            <div>
+                <span class="close-btn" role="button" aria-label="Close">&times;</span>
             <div id="popup-title">Project Title</div>
+            </div>
 
             <!-- Swiper Slider -->
             <div class="swiper-container">
