--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                     <p class="title">Aspiring Data Scientist | AI Enthusiast</p>
                     <p class="description">
                         Passionate about transforming data into actionable insights and building
-                        intelligent solutions that make a real-world impact. Currently pursuing
-                        B.Tech in CSE with expertise in Python, Machine Learning, and Data
+                        intelligent solutions that make a real-world impact.B.Tech graduate from CMRIT with expertise in Python,
+                         Machine Learning, and Data
                         Analytics.
                     </p>
                     <div class="home-buttons">
@@ -188,7 +188,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I am a final-year B.Tech student specializing in CSE(AI&ML) at CMR
+                        I am a B.Tech graduate with a specialization in CSE(AI&ML) from CMR
                         Institute of Technology. With a strong foundation in Python, SQL, and
                         Java, I am passionate about applying data-driven solutions to real-world
                         problems.
@@ -198,13 +198,13 @@
                         that runs real-time statistical analysis,a Fullstack Bengaluru House Price Prediction trained
                         using Linear Regression
                         and a Cricket Analytics tool that builds India's best XI
-                        using scraped performance data. I don't just code features — I build systems that work, scale,
+                        using scraped performance data. I don't just code features . I build systems that work, scale,
                         and
                         deliver insights.
                     </p>
 
                     <p>
-                        Right now, I'm all-in on mastering data science and software development — aiming
+                        Right now, I'm all-in on mastering data science and software development, aiming
                         to join top-tier product teams where real impact matters.
                     </p>
                 </div>
